--- a/views/register.ejs
+++ b/views/register.ejs
@@ -26,24 +26,19 @@
             </div>
             <hr>
             <form action="" class="sub-form" method="post">
-                <div class="mail-input inp">
-                    <input name="mail" type="text" class="usermail" placeholder="email">
-                    <div class="usermail-error error">
-                    </div>
+
+                <input name="mail" type="text" class="usermail" placeholder="email">
+
+                <div class="name-input">
+                    <input type="text" name="firstName" placeholder="First Name">
+                    <input type="text" name="lastName" placeholder="Last Name">
                 </div>
-                <br>
-                <div class="name-input inp">
-                    <input name="username" type="text" class="username" placeholder="username">
-                    <div class="name-error error">
-                    </div>
-                </div>
-                <br>
-                <div class="pass-input inp">
-                    <input name="password" type="password" class="password" placeholder="password">
-                    <div class="pass-error error">
-                    </div>
-                </div>
-                
+
+                <input name="username" type="text" class="username" placeholder="username">
+
+                <input name="password" type="password" class="password" placeholder="password">
+
+
                 <input type="submit" class="submit-btn" value="Register">
                 <div class="have-acc">
                     <div class="login-info">
